# Ziggy

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
proto/: ziggy.proto  zigzag.proto
src/: block.rs  blockchain.rs  conversion.rs  conversions.rs  lib.rs  main.rs  mine.rs  node.rs  transaction.rs  ziggy.rs  zigzag.rs
