[package]
name = "ziggy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.3"
sha2 = "0.9.8"
tonic = "0.6.0"
prost = "0.9.0"
tokio = {version = "1.18.4", features = ["rt-multi-thread"]}
clap = "3.0.10"
anyhow = "1.0.53"
regex = "1.5.5"

[build-dependencies]
tonic-build = "0.6.0"
